--- a/src/main/webapp/resources/css/appForm.css
+++ b/src/main/webapp/resources/css/appForm.css
@@ -20,3 +20,8 @@ div.alert { border-radius: 4px; margin: 5px 0; padding: 8px; background-color: #
   float: left;
   clear: none; 
 }
+
+.largeHeight {
+    height: 24px;
+    width: 25px;
+}
